# ml_learning

./: .gitignore  .gitmodules  README.md  pyproject.toml
CLIP/: README.md  clip_core.py  dataset_cifar.py  model_real.py  sanity_check.py  train_real.py
