[project]
authors = [{name = "tommy60718", email = "128281234+tommy60718@users.noreply.github.com"}]
dependencies = []
name = "ml_learning"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Tell pixi this machine has CUDA → resolve GPU PyTorch builds (see pixi.sh/python/pytorch).
[tool.pixi.system-requirements]
cuda = "12.9"

[tool.pixi.pypi-dependencies]
ml_learning = { path = ".", editable = true }

[tool.pixi.tasks]
clip-smoke = "cd CLIP && python model_real.py"
clip-sanity = "cd CLIP && python sanity_check.py"
clip-train = "cd CLIP && python train_real.py"

[tool.pixi.target.linux-64.dependencies]
pytorch = { version = ">=2.12.1,<3", build = "*cuda*" }
matplotlib = ">=3.10,<4"
torchvision = ">=0.27.1,<0.28"
